* added standalone instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.13)
 
 project(Sacred_2_Modmerge VERSION 0.1 LANGUAGES CXX)
 
@@ -9,5 +9,6 @@ add_executable(s2modmerge src/s2modmerge.cpp)
 # Output name can be changed with this
 # set_target_properties(${THE_TARGET_NAME_VARIABLE} PROPERTIES OUTPUT_NAME "${BINARY_NAME})
 
-add_subdirectory(lib/json)
-target_link_libraries(s2modmerge PRIVATE nlohmann_json::nlohmann_json)
+# WiP for adding json support
+# add_subdirectory(lib/json)
+# target_link_libraries(s2modmerge PRIVATE nlohmann_json::nlohmann_json)
